--- a/Cw2.qmd
+++ b/Cw2.qmd
@@ -3,3 +3,55 @@ title: "Cw2"
 format: html
 ---
 
+## Biblioteki używane w ćwiczenniu
+
+```{r}
+library(tidymodels) 
+library(skimr) 
+library(GGally) 
+library(openair) 
+tidymodels_prefer()
+```
+
+## Wczyatanie danych
+
+```{r}
+air <- mydata |> selectByDate(year = 2002)
+air |> skim()
+```
+
+### Usuawanie brakujących danych
+
+```{r}
+air <- air |> na.omit()
+```
+
+### Korelacja pomiędzy tlenkami azotu, a dwutlenkiem azotu
+
+```{r}
+set.seed(222)
+air[sample(1:nrow(air), size = 300, replace = F),] |> 
+  select(nox, no2) |> 
+  ggpairs()
+```
+
+```{r}
+library(ggpubr)
+# wykres regresji liniowej, do sprawdzenia danych 
+set.seed(222)
+air[sample(1:nrow(air), size = 300, replace = F),] |> 
+  select(nox, no2) |> 
+  ggplot(aes(nox, no2)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = T, formula = y ~ x) + 
+  stat_cor(label.x = 10, label.y = 80) + 
+  stat_regline_equation(label.x = 10, label.y = 87) +
+  theme_bw()
+```
+
+Dane wydają się mocno skorelowane.
+
+
+
+
+
