--- a/Cw2.qmd
+++ b/Cw2.qmd
@@ -13,6 +13,8 @@ library(openair)
 tidymodels_prefer()
 ```
 
+***
+
 ## Wczyatanie danych
 
 ```{r}
@@ -20,11 +22,15 @@ air <- mydata |> selectByDate(year = 2002)
 air |> skim()
 ```
 
+***
+
 ### Usuawanie brakujących danych
 
 ```{r}
 air <- air |> na.omit()
 ```
+
+***
 
 ### Korelacja pomiędzy tlenkami azotu, a dwutlenkiem azotu
 
@@ -51,6 +57,8 @@ air[sample(1:nrow(air), size = 300, replace = F),] |>
 
 Dane wydają się mocno skorelowane.
 
+***
+
 Wykres stężenia ozonu w czasie.
 
 ```{r}
@@ -61,6 +69,8 @@ air |>
 ```
 
 Przyjmujemy założenie, żę stępnie ozonu jest wysokie gdy przekracza 10 mikrogramów na metr sześcienny, a niskie jest poniżej tej wartości.
+
+***
 
 ## Przetwarzanie danych
 
@@ -86,4 +96,25 @@ Check:
 air |> count(ozone)
 ```
 
+***
 
+## Które zmienne uwzględnić w modelu?
+
+Przez silną korelację między parametrami `nox` i `no2` nie ma sensu uwzględniać obu jednocześnie. Wybrano jeden no2, jest on mniej podatny na zmienność emisji z pojazdów.
+
+Z parametru `date` można wyizolować month, hour, weekdey, season.
+
+`pm10`, `pm25`, `so2`, `co` potencjalnie istotne informacje o zanieczyszczeniach mogą być powiązane ze stężniem ozonu w powietrzu.
+
+`temp`, `rh`, `ws` często mają wpływ na poziom ozonu -> należy uwzględnić.
+
+## Box-Cox czy Yeo-Johnson?
+
+Box-Cox działa tylko dla danych dodatnich, drugi za to przyjmuje również dane zawierającce zera i liczby ujemne. Zalecam użycie YoeJohnson do przekształcenia danych liczbowych.
+
+## Normalizacja danych czy potrzebna?
+
+Dla regresji logistycznej teoretycznie nie jest konieczna, ale warto ją wykonać dla przykładowo:
+* dużych róźnic w skali
+* w połączeniu z niektórymi metodami selekcji zmiennych
+* wymaga przy użyciu klasyfikatoró SVN i KNN
