--- a/Cw1.qmd
+++ b/Cw1.qmd
@@ -68,7 +68,7 @@ Teraz przeprowadzono estymację modelu\
 ```{r}
 lm_fit <- 
   lm_mod |> 
-  fit(ozone ~ solar.r * month, data = air)
+  fit(ozone ~ temp + solar.r:wind + solar.r:temp, data = air |> select(-month))
 lm_fit
 ```
 Lepszy sposób wizoalizacji danych:
